--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.17",
     "lucide-react": "^0.416.0",
+    "motion": "^12.10.5",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
